# robot_description_beta

./: CMakeLists.txt  package.xml  robot_description.repo.yaml
config/: base_controller.yaml
container/: Dockerfile  compose.env  compose.yaml
launch/: differential.launch  rbkairos.launch  rbkairos_state_robot.launch  rbogie.launch  rbrobout_rviz.launch  rbrobout_state_robot.launch  rbsherkan_robot_state.launch  rbsherkan_rviz.launch  rbvogui_rviz.launch  robot_description.launch  robot_description.launch.py  watcher_state_robot.launch
launch/legacy/: rb1_base_rviz.launch  rb1_base_state.launch  rb_theron_state.launch  rbvogui_state.launch  summit_xl_rviz.launch  summit_xl_state_robot.launch
legacy/rviz/: default.rviz
meshes/bases/: rbsherkan_base_solid_v1.stl  rbsherkan_base_v1.stl
meshes/rocker/: front_v1.stl
moveit/rbvogui_moveit_ur10/: .setup_assistant  package.xml
moveit/rbvogui_ur10_egh_moveit/: .setup_assistant  package.xml
moveit/rbvogui_ur10_rg2_moveit/: .setup_assistant  package.xml
moveit/rbvogui_ur5_moveit/: .setup_assistant  package.xml
moveit/rbvogui_ur5_rg2_moveit/: .setup_assistant  package.xml
moveit/rbvogui_ur5e_robotiq_moveit/: .setup_assistant  package.xml
moveit/rbvogui_xl_2ur10_e_moveit/: .setup_assistant  package.xml
moveit/rbvogui_xl_lift_ur10e_moveit/: .setup_assistant  package.xml
robot_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_control/config/: robot_diff_control.yaml
robot_control/launch/: kinova_control.launch  onrobot_control.launch  rb1_base_control.launch  rb_theron_control.launch  rbkairos_control.launch  rbrobout_control.launch  rbsherkan_control.launch  rbvogui_control.launch  robotiq_control.launch  schunk_control.launch  summit_xl_control.launch  trossen_control.launch  ur_control.launch
robots/: rb1_base.urdf.xacro  rb_theron.urdf.xacro  rb_theron_base.urdf.xacro  rb_theron_elevator.urdf.xacro  rb_theron_omni.urdf.xacro  rb_watcher_std.urdf.xacro  rbkairos_base.urdf.xacro  rbkairos_extension_ur16.urdf.xacro  rbkairos_ur10.urdf.xacro  rbkairos_ur10e_plus.urdf.xacro  rbkairos_ur16.urdf.xacro  rbkairos_ur5.urdf.xacro  rbrobout.urdf.xacro  rbsherkan_std.urdf.xacro  rbvogui_6w_std.urdf.xacro  rbvogui_std.urdf.xacro  rbvogui_std_ur10.urdf.xacro  rbvogui_std_ur10_egh.urdf.xacro  rbvogui_std_ur10_rg2.urdf.xacro  rbvogui_std_ur5.urdf.xacro  rbvogui_std_ur5_rg2.urdf.xacro  rbvogui_ur5e.urdf.xacro  rbvogui_xl_biarm.urdf.xacro  rbvogui_xl_lift_ur10e.urdf.xacro  rbvogui_xl_lift_ur10e_hand_e.urdf.xacro  rbvogui_xl_std.urdf.xacro  summit_hm_std.urdf.xacro  summit_xl_std.urdf.xacro  summit_xl_tix_std.urdf.xacro  summit_xls_std.urdf.xacro
robots/macros/: rb_theron_macro.xacro  rbkairos_macro.urdf.xacro  rbsummit_xl_macro.xacro  rbtheron_macro.xacro  rbvogui_macro.urdf.xacro  summit_xl_macro.xacro
rviz/: simple_model.rviz
test/: xacro_test.py
urdf/: ros2_control.urdf.xacro
urdf/box/: box.launch  (+3 more)
(+251 files in other folders)
