<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>URDF description for Robotnik</description>

  <url type="website">http://ros.org/wiki/robot_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/robot_description.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/robot_description/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>
  <maintainer email="aarnal@robotnik.es">Álex Arnal</maintainer>
  <maintainer email="mmillet@robotnik.es">Marta Millet</maintainer>
  <maintainer email="afont@robotnik.es">Andres Font</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotnik_sensors</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
